Minor color changes

--- a/frontend/src/demoVideo.css
+++ b/frontend/src/demoVideo.css
@@ -8,8 +8,8 @@
 .demo-video {
     border-radius: 2rem;
     border-width: 1rem;
-    border-color: #6988b5;
-    box-shadow: 1rem 1rem 7rem #6988b5;
+    border-color: #e43041;
+    box-shadow: 1rem 1rem 7rem #e43041;
     width: 100%;
     height: auto;
     display: block; 
